gcc/testsuite/rust/rustc/ui/rfc-2091-track-caller/error-odd-syntax.rs
#[track_caller(1)]
fn f() {}
// { dg-error "" "" { target *-*-* } .-2 }

fn main() {}

